tests/compiler_errors/fn_tests/unclosed_fn_no_body.tlp
fn foo int -> int do 